[tool.poetry]
name = "blog-service"
version = "0.1.0"
description = ""
authors = ["locmai <locmai0201@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.53.0"
loguru = "^0.4.1"
uvicorn = "^0.11.3"
motor = "^2.1.0"
dnspython = "^1.16.0"
toml = "^0.10.0"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
